# shortURL

./: .env.example  .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
core/: settings.py  urls.py
theme/static_src/: .gitignore
theme/templates/: base.html  nav.html  out_home.html
urlshort/: models.py  urls.py  views.py
urlshort/form/: url_form.py
urlshort/migrations/: 0001_initial.py  0002_alter_shorturl_short_url.py  0003_alter_shorturl_short_url.py  0004_alter_shorturl_note.py  0005_shorturl_is_enable_alter_shorturl_url.py
urlshort/templates/pages/: edit.html  home.html  index.html  show.html
