[tool.poetry]
name = "short-url"
version = "0.1.0"
description = ""
authors = ["roger <r1990227@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-tailwind = "^3.8.0"
django-browser-reload = "^1.16.0"
django-qr-code = "^4.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
